--- a/PalworldServerManager/PalworldServerManager/Form_ServerSettings.zh-Hans.resx
+++ b/PalworldServerManager/PalworldServerManager/Form_ServerSettings.zh-Hans.resx
@@ -789,19 +789,34 @@ All全都掉</value>
   <data name="textBox_onServerCmdCrashRestartInterval.ToolTip" xml:space="preserve">
     <value />
   </data>
+  <data name="label73.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft YaHei, 9pt</value>
+  </data>
+  <data name="label73.Text" xml:space="preserve">
+    <value>服务器重启 RCON 广播间隔 (秒 (0 = 不广播))</value>
+  </data>
+  <data name="tableLayoutPanel6.ToolTip" xml:space="preserve">
+    <value />
+  </data>
+  <data name="textBox_restartServerRCONAlertInterval.ToolTip" xml:space="preserve">
+    <value />
+  </data>
+  <data name="textBox_restartServerRCONAlertMessage.ToolTip" xml:space="preserve">
+    <value />
+  </data>
+  <data name="label75.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft YaHei, 9pt</value>
+  </data>
+  <data name="label75.Text" xml:space="preserve">
+    <value>广播内容</value>
+  </data>
+  <data name="label75.ToolTip" xml:space="preserve">
+    <value />
+  </data>
   <data name="panel_backup.ToolTip" xml:space="preserve">
     <value />
   </data>
-  <data name="tableLayoutPanel4.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="label66.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft YaHei, 9pt</value>
-  </data>
-  <data name="label66.Text" xml:space="preserve">
-    <value>备份到</value>
-  </data>
-  <data name="label66.ToolTip" xml:space="preserve">
+  <data name="tableLayoutPanel3.ToolTip" xml:space="preserve">
     <value />
   </data>
   <data name="panel5.ToolTip" xml:space="preserve">
@@ -1022,17 +1037,14 @@ All全都掉</value>
   <data name="button_backupTo.ToolTip" xml:space="preserve">
     <value />
   </data>
-  <data name="tableLayoutPanel3.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="textBox_maxBackup.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="label67.Font" type="System.Drawing.Font, System.Drawing">
+  <data name="label66.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft YaHei, 9pt</value>
   </data>
-  <data name="label67.Text" xml:space="preserve">
-    <value>自动删除旧备份阈值 (0 = 不删除备份)</value>
+  <data name="label66.Text" xml:space="preserve">
+    <value>备份到</value>
+  </data>
+  <data name="label66.ToolTip" xml:space="preserve">
+    <value />
   </data>
   <data name="label65.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft YaHei, 9pt</value>
@@ -1044,6 +1056,39 @@ All全都掉</value>
     <value />
   </data>
   <data name="textBox_backupInterval.ToolTip" xml:space="preserve">
+    <value />
+  </data>
+  <data name="label67.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft YaHei, 9pt</value>
+  </data>
+  <data name="label67.Text" xml:space="preserve">
+    <value>自动删除旧备份阈值 (0 = 不删除备份)</value>
+  </data>
+  <data name="textBox_maxBackup.ToolTip" xml:space="preserve">
+    <value />
+  </data>
+  <data name="label72.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft YaHei, 9pt</value>
+  </data>
+  <data name="label72.Text" xml:space="preserve">
+    <value>备份保存 RCON 广播间隔 (秒 (0 = 不广播))</value>
+  </data>
+  <data name="tableLayoutPanel5.ToolTip" xml:space="preserve">
+    <value />
+  </data>
+  <data name="textBox_backupRCONAlertInterval.ToolTip" xml:space="preserve">
+    <value />
+  </data>
+  <data name="textBox_backupRCONAlertMessage.ToolTip" xml:space="preserve">
+    <value />
+  </data>
+  <data name="label74.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft YaHei, 9pt</value>
+  </data>
+  <data name="label74.Text" xml:space="preserve">
+    <value>广播内容</value>
+  </data>
+  <data name="label74.ToolTip" xml:space="preserve">
     <value />
   </data>
   <data name="panel2.ToolTip" xml:space="preserve">
