--- a/PalworldServerManager/PalworldServerManager/Form_RCON.zh-Hans.resx
+++ b/PalworldServerManager/PalworldServerManager/Form_RCON.zh-Hans.resx
@@ -258,6 +258,15 @@ RCON 仅支持 ASCII 可打印字符
   <data name="button_save.ToolTip" xml:space="preserve">
     <value />
   </data>
+  <data name="button_banListTxt.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft YaHei, 9pt</value>
+  </data>
+  <data name="button_banListTxt.Text" xml:space="preserve">
+    <value>打开封禁名单文件</value>
+  </data>
+  <data name="button_banListTxt.ToolTip" xml:space="preserve">
+    <value />
+  </data>
   <data name="button_connectRCON.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft YaHei, 9pt</value>
   </data>
